versions/v2.9/modules/en/pages/integrations/rancher-desktop.adoc
= Kubernetes on the Desktop with Rancher Desktop
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: integrations-in-rancher/rancher-desktop 
:product-path: integrations/rancher-desktop

Rancher Desktop bundles together essential tools for developing and testing cloud-native applications from your desktop.

If you're working from your local machine on apps intended for cloud environments, you normally need a lot of preparation. You need to select a container run-time, install Kubernetes and popular utilities, and possibly set up a virtual machine. Installing components individually and getting them to work together can be a time-consuming process.

To reduce the complexity, Rancher Desktop offers teams the following key features:

* Simple and easy installation on macOS, Linux and Windows operating systems.
* K3s, a ready-to-use, light-weight Kubernetes distribution.
* The ability to easily switch between Kubernetes versions.
* A GUI-based cluster dashboard powered by Rancher to explore your local cluster.
* Freedom to choose your container engine: dockerd (moby) or containerd.
* Preference settings to configure the application to suit your needs.
* Bundled tools required for your container, for Kubernetes-based development, and for operation workflows.
* Periodic updates to keep bundled tools up to date.
* Integration with popular tools/IDEs, including VS Code and Skaffold.
* Image & Registry access control.
* Support for Docker extensions.

Visit the https://rancherdesktop.io[Rancher Desktop] website and read the https://docs.rancherdesktop.io/[docs] to learn more.

To install Rancher Desktop on your machine, refer to the https://docs.rancherdesktop.io/getting-started/installation[installation guide].

== Trying Rancher on Rancher Desktop

Rancher Desktop offers the setup and tools you need to easily try out containerized, Helm-based applications. You can get started with the Rancher Kubernetes Management platform using Rancher Desktop, by following this https://docs.rancherdesktop.io/how-to-guides/rancher-on-rancher-desktop[how-to guide].
